Works but to refactor and to clean up